Added status filtering to stats

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -20,7 +20,7 @@
 		<p>As well as possibly some more stats in general</p>
 		<P>And make it look pretty - add a graph, perchance</P>
 		<ul>
-			<li>{{stats.numProjects}} active projects</li>
+			<li>{{stats.numProjectActive}} active projects</li>
 			<ll>{{stats.numProjectsCompleted}} completed projects</ll>
 			<li>{{stats.numUsers}} Users</li>
 			<li>Oldest active post: {{stats.oldestPost}}</li>
