Updated seed data, and update oldest/newest posts to sort by active

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -22,7 +22,7 @@
 		<ul>
 			<li>{{stats.numProjectActive}} active projects</li>
 			<ll>{{stats.numProjectsCompleted}} completed projects</ll>
-			<li>{{stats.numUsers}} Users</li>
+			<li>{{stats.numUsers}} users</li>
 			<li>Oldest active post: {{stats.oldestPost}}</li>
 			<li>Newest active post: {{stats.newestPost}}</li>
 		</ul>
