--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -4,7 +4,7 @@
 		<img src="../public/LogoB.png" class="logo" />
 		<span class="brand-text">GitMatches</span>
 	</div>
-	<a href="/auth/login">Join or Login</a>
+	<a href="/auth/login" class="joinlogin" >Join or Login</a>
 </div>
 
 <header>
