--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,7 +1,13 @@
 {{! General navbar used on all pages once someone is logged in }}
 <div class="navbar">
-	<a href="/projects">Projects</a>
-	<a href="/notifications">Notifications</a>
-	<a href="/profile">My Profile</a>
-	<a href="/auth/logout">Signout</a>
+  <div class="nav-left">
+    <img src= "../../public/LogoB.png" alt="Logo" class="logo" />
+    <span class="brand-text">GitMatches</span>
+  </div>
+  <div class="nav-right">
+    <a href="/projects">Projects</a>
+    <a href="/dashboard">Dashboard</a>
+    <a href="/profile">Profile</a>
+    <a href="/logout" class="logout">Logout</a>
+  </div>
 </div>
