--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -2,52 +2,58 @@
 {{!-- https://handlebarsjs.com/guide/partials.html#basic-partials --}}
 {{> navbar}}
 <div class="container">
-    <h1>Projects</h1>
-    <a href="/projects/projectcreate">Create new Project</a>
-    <div class="filterSelection">
-        <form method="GET" action="/projects" name="filterSelection-form" id="filterSelection-form">
-            <!-- Search by project name -->
-            <input type="text" name="search" placeholder="Search by project name" />
+    <div class="pageContent">
+        <!-- LEFT COLUMN -->
+        <div class="sidebar">
+            <h1>Projects</h1>
+            <a href="/projects/projectcreate" class="create-project-link">Create new Project</a>
+            <div class="filterSelection">
+                <form method="GET" action="/projects" name="filterSelection-form" id="filterSelection-form">
+                  <!-- Search by project name -->
+                    <input type="text" name="search" placeholder="Search by project name" />
+                    <!-- Filter by tags TODO: NEED TO FIGURE OUT HOW TO GET ALL OUR TAGS IN HERE (maybe so don't need to hardcode?) -->
+                    <label for="tags">Domains:</label>
+                    <select name="tags" id="tags" multiple>
+                        {{!-- <option value="Web">Web</option>
+                        <option value="Machine Learning">Machine Learning</option>
+                        <option value="Mobile">Mobile</option> --}}
+                        {{#each termsAndDomains}}
+                            {{#unless (isDuplicate this.domain)}}
+                                <option value="{{this.domain}}">{{this.domain}}</option>
+                            {{/unless}}
+                        {{/each}}
+                    </select>
+                    <!-- Filter by language/domain TODO: NEED TO FIGURE OUT HOW TO GET ALL OUR TAGS IN HERE(maybe so don't need to hardcode?)  -->
+                    <label for="languages">Languages:</label>
+                    <select name="languages" id="languages" multiple>
+                        {{!-- <option value="JavaScript">JavaScript</option>
+                        <option value="Python">Python</option>
+                        <option value="Java">Java</option> --}}
+                        {{#each termsAndDomains}}
+                            {{#if (eq this.tag "ProgrammingLanguage")}}
+                                <option value="{{@key}}">{{@key}}</option>
+                            {{/if}}
+                        {{/each}}
+                    </select>
 
-            <!-- Filter by tags TODO: NEED TO FIGURE OUT HOW TO GET ALL OUR TAGS IN HERE (maybe so don't need to hardcode?) -->
-            <label for="tags">Domains:</label>
-            <select name="tags" id="tags" multiple>
-                {{!-- <option value="Web">Web</option>
-                <option value="Machine Learning">Machine Learning</option>
-                <option value="Mobile">Mobile</option> --}}
-                {{#each termsAndDomains}}
-                    {{#unless (isDuplicate this.domain)}}
-                        <option value="{{this.domain}}">{{this.domain}}</option>
-                    {{/unless}}
-                {{/each}}
-            </select>
-            <!-- Filter by language/domain TODO: NEED TO FIGURE OUT HOW TO GET ALL OUR TAGS IN HERE(maybe so don't need to hardcode?)  -->
-            <label for="languages">Languages:</label>
-            <select name="languages" id="languages" multiple>
-                {{!-- <option value="JavaScript">JavaScript</option>
-                <option value="Python">Python</option>
-                <option value="Java">Java</option> --}}
-                {{#each termsAndDomains}}
-                    {{#if (eq this.tag "ProgrammingLanguage")}}
-                        <option value="{{@key}}">{{@key}}</option>
-                    {{/if}}
-                {{/each}}
-            </select>
+                     <!-- Filter by project status -->
 
-            <!-- Filter by project status -->
-            <label for="status">Status:</label>
-            <select name="status" id="status">
-                <option value="">All</option>
-                <option value="active">Active</option>
-                <option value="completed">Completed</option>
-            </select>
+                    <label for="status">Status:</label>
+                    <select name="status" id="status">
+                        <option value="">All</option>
+                        <option value="active">Active</option>
+                        <option value="completed">Completed</option>
+                    </select>
+                    <button type="submit">Filter</button>
+                    <button type="button" id="resetFilters">Reset Filters</button>
+                </form>
+            </div>
+        </div>
 
-            <button type="submit">Filter</button>
-            <button type="button" id="resetFilters">Reset Filters</button>
-        </form>
-    </div>
-    <div class="projectsArea">
-        {{> projectList}}
+        <!-- RIGHT COLUMN -->
+        <div class="projectsArea">
+            {{> projectList}}
+        </div>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
