Fixed stats rendering issue (typos)

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -20,8 +20,8 @@
 		<p>As well as possibly some more stats in general</p>
 		<P>And make it look pretty - add a graph, perchance</P>
 		<ul>
-			<li>{{stats.numProjectActive}} active projects</li>
-			<ll>{{stats.numProjectsCompleted}} completed projects</ll>
+			<li>{{stats.numProjectsActive}} active projects</li>
+			<li>{{stats.numProjectsCompleted}} completed projects</li>
 			<li>{{stats.numUsers}} users</li>
 			<li>Oldest active post: {{stats.oldestPost}}</li>
 			<li>Newest active post: {{stats.newestPost}}</li>
