ermm ahhhhh style changes :3

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,4 +1,8 @@
 {{! Handlebars specifically for the landing page for new users }}
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/public/css/main.css">
+</head>
 <div class="navbar">
 	<div class="nav-left">
 		<img src="../public/LogoB.png" class="logo" />
