--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,8 @@
 {{! Handlebars for the user profile page }}
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/css/main.css">
+</head>
 {{> navbar}}
 <div class="container">
     <div class="leftSide">
