--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -1,5 +1,11 @@
 {{! Handlebars for the main home page of project posts }}
 {{!-- https://handlebarsjs.com/guide/partials.html#basic-partials --}}
+{{!-- projects.handlebars --}}
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/css/projects.css">
+</head>
+
 {{> navbar}}
 <div class="container">
     <div class="pageContent">
