--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>{{title}}</title>
-		<link rel="stylesheet" href="/public/css/main.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		{{!-- <link rel="stylesheet" href="/public/css/main.css" /> --}}
 	</head>
 	<body>
 		<main>
