--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,7 @@
 {{! Handlebars for the login page }}
+<head>
+	<link rel="stylesheet" href="/public/css/main.css">
+</head>
 <div class="navbar">
 	<div class="nav-left">
 		<img src="../public/LogoB.png" class="logo" />
