--- a/views/projectcreate.handlebars
+++ b/views/projectcreate.handlebars
@@ -1,4 +1,8 @@
 {{! Handlebars for the page for users to create a project }}
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/css/projects.css">
+</head>
 {{> navbar}}
 {{#if error}}
 	<p class="error" id="error">{{error}}</p>
