--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,8 @@
 {{! Handlebars for the signup page }}
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/css/main.css">
+</head>
 <div class="navbar">
 	<a href="/">Home</a>
 </div>
