IM LIKING IT IM LIKING IT IM LIKING IT

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -9,10 +9,10 @@
         <p>{{project.content}}</p>
         <a href="{{project.repoLink}}" target="_blank">GitHub Repository</a>
         {{!-- Likes --}}
-        <form method="POST" action="/projects/{{project._id}}/like">
-            <button type="submit">Like</button>
-        </form>
-        <span>{{project.likes}} Likes</span>
+        <button id="likeButton" data-project-id="{{project._id}}">
+            Like
+        </button>
+        <span id="likeCount">{{project.likes.length}} Likes</span>
         {{!-- Comments --}}
         {{> commentsList comments=project.comments}}
         <form method="POST" action="/projects/{{project._id}}/comments">
@@ -44,3 +44,4 @@
     </div>
 </div>
 <script src="/public/js/comment.js"></script>
+<script src="/public/js/like.js"></script>
