added friend request send button

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -81,6 +81,17 @@
                 <li>It's a little lonely... no friends :(</li>
             {{/if}}
         </ul>
+        {{!-- https://stackoverflow.com/questions/10540176/how-to-implement-not-with-if-statement-in-ember-handlebars --}}
+        {{#if hasApplication}}
+            <p>Friend Request pending...</p>
+        {{else}}
+            {{#unless isMyProfile}}
+                <form method="POST" action="/profile/TODO">
+                    <button type="submit">Send Friend Request</button><br>
+                    <textarea name="text" placeholder="Add an additional message..."></textarea>
+                </form>
+            {{/unless}}
+        {{/if}}
     </div>
 </div>
 <script src="/public/js/resumeUpload.js"></script>
