Added notification display

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -6,7 +6,7 @@
   </div>
   <div class="nav-right">
     <a href="/projects" class="projectsnav">Projects</a>
-    <a href="/notifications" class="notifnav">Notifications</a>
+    <a href="/notifications" class="notifnav">Notifications{{notifs}}</a>
     <a href="/profile" class="profilenav">Profile</a>
     <a href="/auth/logout" class="logout">Logout</a>
     </div>
