--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -91,7 +91,7 @@
                 <p>Friend Request pending...</p>
             {{else}}
                 {{#unless isMyProfile}}
-                    <form method="POST" action="/profile/TODO">
+                    <form method="POST" action="/profile/friendRequest/{{user._id}}">
                         <button type="submit">Send Friend Request</button><br>
                         <textarea name="text" placeholder="Add an additional message..."></textarea>
                     </form>
