show friend request pending if its pending

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -87,7 +87,7 @@
                 <button type="submit">Remove Friend</button>
             </form>
         {{else}}
-            {{#if hasApplication}}
+            {{#if hasFriendRequest}}
                 <p>Friend Request pending...</p>
             {{else}}
                 {{#unless isMyProfile}}
