ADDING DA AWESOME DATA SEED SHIT -- GET FREAKY 😛

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -5,8 +5,8 @@
 </head>
 <div class="navbar">
 	<div class="nav-left">
-		<img src="../public/LogoB.png" class="logo" />
-		<span class="brand-text">GitMatches</span>
+		<a href="/"><img src="../public/LogoB.png" class="logo" /></a>
+		<a href="/" class="brand-text">GitMatches</a>
 	</div>
 	<a href="/auth/login" class="joinlogin" >Join or Login</a>
 </div>
