--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,8 +4,8 @@
 </head>
 <div class="navbar">
 	<div class="nav-left">
-		<img src="../public/LogoB.png" class="logo" />
-		<span class="brand-text">GitMatches</span>
+		<a href="/"><img src="../public/LogoB.png" class="logo" /></a>
+		<a href="/" class="brand-text">GitMatches</a>
 	</div>
 	<a href="/">Home</a>
 </div>
