--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="/public/css/main.css">
 </head>
 <div class="navbar">
+	<div class="nav-left">
+		<a href="/"><img src="../public/LogoB.png" class="logo" /></a>
+		<a href="/" class="brand-text">GitMatches</a>
+	</div>
 	<a href="/">Home</a>
 </div>
 <h1>GitMatches</h1>
