Added checking for some edge cases in text forms

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -262,3 +262,9 @@ a:hover {
     color: white; /* White text on hover */
 }
 
+/* FOR ANNA - STYLING FOR PROJECT and NOTIFS*/
+.leftSide, .rightSide {
+    flex: 1;
+    min-width: 0;
+    overflow-wrap: break-word;
+}
