--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -49,3 +49,4 @@
 </div>
 <script src="/public/js/comment.js"></script>
 <script src="/public/js/like.js"></script>
+<script src="/public/js/applicationJoin.js"></script>
