--- a/views/editProfile.handlebars
+++ b/views/editProfile.handlebars
@@ -1,4 +1,8 @@
 {{! Handlebars for editing user profile and projects }}
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/css/editProfile.css">
+</head>
 {{> navbar}}
 <div class="container">
     <h1>Edit Profile</h1>
