--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -304,6 +304,7 @@ footer {
     color: white; /* White text on hover */
 }
 
+/* And this has the projects highlighted when on page */
 
 .navbar .projectsnav {
     font-weight: 600; /* Bold text */
