fix "join" button link

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -39,7 +39,7 @@
 			<p>GitMatches intelligently matches you with open-source projects based on GitHub activity, skills, and resume data, making collaboration seamless.</p>
 			<p>Whether you're looking to join a project, find contributors, or expand your developer network, GitMatches is here to help you build meaningful connections.</p>
 			<br>
-			<a href="/join" class="cta-button">Join Now</a>
+			<a href="/auth/register" class="cta-button">Join Now</a>
 		</div>
 	</div>
 	<div class="rightStats">
