--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,6 +2,10 @@
 <head>
 	<link rel="stylesheet" href="/public/css/main.css">
 </head>
+
+<!-- add textured background -->
+<div class="coolahhbg"></div>
+
 <div class="navbar">
 	<div class="nav-left">
 		<a href="/"><img src="../public/LogoB.png" class="logo" /></a>
