--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,6 +3,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/main.css">
 </head>
+
+<!-- add textured background -->
+<div class="coolahhbg"></div>
+
 <div class="navbar">
 	<div class="nav-left">
 		<a href="/"><img src="../public/LogoB.png" class="logo" /></a>
